@@ -107,6 +107,9 @@ Optimizations
 
 * GITHUB#13989: Faster checksum computation. (Jean-François Boeuf)
 
+* GITHUB#14021: WANDScorer now computes scores on the fly, which helps prevent
+  advancing "tail" clauses in many cases. (Adrien Grand)
+
 Bug Fixes
 ---------------------
 * GITHUB#13832: Fixed an issue where the DefaultPassageFormatter.format method did not format passages as intended
